--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "com.raxy.pooliing",
+  "name": "com.raxy.pooling",
   "version": "1.0.0",
   "displayName": "RAXY Pooling",
   "author": {
